[tool.poetry]
name = "reg2es"
version = "1.0.0"
description = "A library for fast import of Windows NT Registry(REGF) into Elasticsearch."
authors = ["sumeshi <j15322sn@gmail.com>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/sumeshi/reg2es"
homepage = "https://github.com/sumeshi/reg2es"

keywords = ['registry', 'elasticsearch', 'json']

[tool.poetry.scripts]
reg2es = 'reg2es.views.Reg2esView:entry_point'
reg2json = 'reg2es.views.Reg2jsonView:entry_point'

[tool.poetry.dependencies]
python = "^3.7"
elasticsearch = "^7.7.1"
tqdm = "^4.46.1"
urllib3 = "^1.26.5"
orjson = "^3.6.0"
importlib_metadata = "^4.6.1"
libregf-python = "^20210615"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
mypy = "^0.780"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
